[package]
name = "pshvr"
version = "0.1.0"
authors = ["Hugo Lundin <hugo@lundin.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
reqwest = { version = "0.10.8", features = ["blocking"]}
tokio = { version = "0.2", features = ["macros"] }
envfile = "0.2.1"
dirs = "3.0.1"
log = "0.4.11"